bk_ida/gccida/g0/alloc_aux_for_edges
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_aux_for_edges/src/cfg.c:1169:6: error: use of undeclared identifier 'initialized_2'
if ( initialized_2 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_aux_for_edges/src/cfg.c:1177:1: error: use of undeclared identifier 'initialized_2'
initialized_2 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/alloc_aux_for_edges/src/obj/cfg.o] Error 1
